--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel='favicon' href = './globeiq.png' />
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -67,10 +68,10 @@
 
       <!-- Overlay UI with Tailwind -->
       <header class="fixed top-0 left-0 w-full z-10 p-5 flex justify-between items-center bg-transparent navi">
-          <h1 class="text-4xl font-bold text-white">Features</h1>
+          <h1 class="text-4xl font-bold text-white">Globe IQ</h1>
           <nav class="space-x-4">
               <a href="/" class="text-white hover:text-blue-500 transition">Home</a>
-              <a href="#features" class="text-white hover:text-blue-500 transition">Features</a>
+              <a href="./features.html" class="text-white hover:text-blue-500 transition">Features</a>
               <a href="./resources.html" class="text-white hover:text-blue-500 transition">Resources</a>
               <button id="toggle-btn"
                       class="mt-10 px-6 py-3 font-bold text-white btn-glow rounded-lg transition">
